--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<input type="submit" value="submit" id="btn">
+	<button id="btn">Submit button</button>
 
 </body>
 
