--- a/main.html
+++ b/main.html
@@ -10,8 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<button id="btn" type="submit">Submit button</button>
-
-</body>
+	<button id="btn">Submit button</button>
+	</body>
 
 </html>
